--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,9 @@ a{color:inherit; text-decoration:none}
   background:
     linear-gradient(180deg, rgba(251,250,246,.00) 0%, rgba(251,250,246,.35) 40%, rgba(251,250,246,.92) 100%),
     radial-gradient(900px 450px at 72% 15%, rgba(215,191,88,.20), rgba(215,191,88,0)),
-    url("https://images.unsplash.com/photo-1559339352-11d035aa65de?auto=format&fit=crop&w=2400&q=80");
+    url("https://osminog-restomarket.ru/upload/6699f84a-9cee-ce8f-be37-63e3861a96a0_image_c");
+    
+
   background-size:cover;
   background-position:center;
   filter: saturate(.95);
